@startuml Obstaculo

class Interactuable{
    +{abstract}interactuar (jugador: Jugador)
    +{abstract}esPremio(): boolean
    +{abstract}interactuo(): boolean
}


abstract class Obstaculo{
    #interctuo: boolean
    +esPremio(): boolean
    +interactuo(): boolean
    +setInteractuo()
}

class Piedra{
    -turnosAPerder: Turno
    -interactuar(jugador: Jugador)
}

class Bacanal{
    -proporcion: int
    -interactuar(jugador: Jugador)
}

class FieraSalvaje{
    -interactuar(jugador: Jugador)
}

Interactuable <-- Obstaculo

Obstaculo <|-- Piedra
Obstaculo <|-- Bacanal
Obstaculo <|-- FieraSalvaje

@enduml